<resources>
    <string name="app_name">Exibition center Matka</string>
    <string name="app_name_mk">Матка изложбениот центар</string>
    <string name="splash_screen_button_text">ПРОДОЛЖИ</string>
    <string name="exponates_menu_title">Експонати</string>
    <string name="history_menu_title">Историја</string>
    <string name="video_menu_title">Видео</string>
    <string name="contact_menu_title">Контакт</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- HOME FRAGMENT -->
    <string name="home_intro">Изложбениот центар Матка е едиствен едукативен центар во
    Македонија што се бави со енергетски теми. Во него посетителите
    преку современи интерактивни методи може да научат повеќе за
    енергијата, нејзината историја, производство, пренос и користеье.</string>

    <string name="home_title">МАТКА ИЗЛОЖБЕН ЦЕНТАР</string>

    <string name="exponates_home_title">ЕКСПОНАТИ</string>
    <string name="history_title">ИСТОРИЈА</string>

    <string name="history_text">Во триесеттите години на минатиот век, на излезот од кањонот Матка е
        изградено вештачко езеро на реката Треска, со бетонска брана, за производство на електрична енергија.
        Градежните работи на браната започнале во 1935 година,
        а хидроцентралата започнала со работа во 1938 година со инсталиран капацитет од 4,2 MW.
        \n
        \n
        Изградбата била обемна и бил колективен потфат, капитален проект на своето време, но најзаслужен за
        нејзината изградба е проф. Д-р Миладин Пеќинар идејниот автор на проектот,
        проектант и човекот што вршел надзор на изградбата.
        Кога браната била готова Пеќинар застанал на нејзиниот врв и извикал:
        „Ако отиде браната нека отиде со неа и тој што ја замислил“.
        \n
        \n
        За време на Втората светска војна токму ХЕЦ Матка била еден од стратешките објекти околу која се воделе битки.
        Таа била цел на бомбардирање во текот на воените операции, при повекувањето на фашистичките сили.
        Дури имало и обид за нејзино минирање но, група партизани херојски ја одбраниле Матка.
        Браната на хидроцентралата Матка неколку пати го спасила и Скопје од поплави и тоа за време на големата полава во
        1962 година и во 1979 кога браната задржала голерма количина на вода и придонела за спречување на поголеми катастрофи.
        \n
        \n
        Хидроцентралата Матка денес е дел од производството на обновлива енергија на ЕВН во Македонија.
        Во 2008 година е направена реконструкција и е изградена комплетно нова хидроцентрала.
        Со изградбата на нова машинска зграда, лоцирана во непосредна близина,
        старата машинска зграда престана со функција, по што во 2016 година е пренаменета во едукативно-изложбен центар.
        \n
        \n
        \n
        \n</string>
    <string name="location">ЛОКАЦИЈА</string>
    <string name="location_text">ХЕЦ Матка / Кањон Матка, Општина Сарај, Скопје</string>
    <string name="working_days">април / октомври   секој ден освен понеделник</string>
    <string name="working_time">10:00 - 15:00</string>
    <string name="conntact">КОНТАКТ</string>
    <string name="phone_number">072/935-105</string>
    <string name="do_skopje">ДО СКОПЈЕ</string>
    <string name="do_matka">ДО МАТКА</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_exponate_detail">ExponateDetailActivity</string>

</resources>
