<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment"
    android:background="@color/fragment_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/home_top_image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/home_exponat_img"
                android:scaleType="centerCrop" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/overlay"
                android:adjustViewBounds="true"
                android:layout_alignBottom="@+id/home_top_image"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="-20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_font"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_intro"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_font"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exponates_home_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/roboto_font"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exponates_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>




</FrameLayout>