<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ContactFragment"
    android:background="@color/fragment_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/contact_top_map"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/contact_top_map_image"
                android:scaleType="centerCrop"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/overlay"
                android:adjustViewBounds="true"
                android:layout_alignBottom="@+id/contact_top_map"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/location"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            android:text="@string/location_text"
            android:textColor="@color/text_color"
            android:fontFamily="@font/roboto_font"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:text="РАБОТНО ВРЕМЕ"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_font"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="30dp"
                    android:textSize="14sp"
                    android:lines="2"
                    android:text="@string/working_days"
                    android:textColor="@color/text_color"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_font"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/working_time"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_font"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:lines="2"
                android:text="@string/conntact"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_weight="1"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_font"/>

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/phone_number"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_font"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:lines="2"
                android:text="@string/do_matka"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_font"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/fromMatka_bus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:src="@drawable/baseline_directions_bus_black_48dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:gravity="end"/>

            <ImageView
                android:id="@+id/fromMatka_taxi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="3"
                android:src="@drawable/baseline_local_taxi_black_48dp"
                android:layout_gravity="center_vertical"
                android:gravity="end"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:lines="2"
                android:text="@string/do_skopje"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_weight="2"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_font"/>

            <ImageView
                android:id="@+id/toSkopjePlane"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/baseline_flight_takeoff_black_48"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:gravity="end"/>

            <ImageView
                android:id="@+id/toSkopjeBus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:src="@drawable/baseline_directions_bus_black_48dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:gravity="end"/>

            <ImageView
                android:id="@+id/toSkopjeTrain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="3"
                android:src="@drawable/baseline_train_black_48dp"
                android:layout_gravity="center_vertical"
                android:gravity="end"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/evn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:src="@drawable/evn"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</FrameLayout>